fix temperature text alignment

--- a/dashboard-raspberry-light/weather/weather.css
+++ b/dashboard-raspberry-light/weather/weather.css
@@ -108,6 +108,7 @@ html, body {
 .card-container .card .details .temp {
     font-size: 6vh;
     line-height: 6vh;
+    flex-shrink: 0;
 }
 
 .card-container .card .details .temp .temp-degrees {
